--- a/index.html
+++ b/index.html
@@ -2,78 +2,94 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resep Nusantara</title>
+    <meta name="description" content="Temukan berbagai resep makanan khas Indonesia dari seluruh Nusantara dengan gambar dan cara memasak yang mudah dipahami.">
+    <title>Resep Nusantara | Kuliner Khas Indonesia</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="images/favicon.png">
 </head>
 <body>
     <!-- Header -->
     <header>
-        <h1>Resep Nusantara</h1>
-        <nav>
-            <ul>
-                <li><a href="#">Beranda</a></li>
-                <li><a href="#">Kategori</a></li>
-                <li><a href="#">Favorit</a></li>
-                <li><a href="#">Tentang Kami</a></li>
-                <li><a href="#">Kontak</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+            <h1>Resep Nusantara</h1>
+            <nav>
+                <ul>
+                    <li><a href="#">Beranda</a></li>
+                    <li><a href="#kategori">Kategori</a></li>
+                    <li><a href="#resep-unggulan">Resep Unggulan</a></li>
+                    <li><a href="#">Tentang Kami</a></li>
+                    <li><a href="#">Kontak</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <!-- Banner -->
     <section class="banner">
-        <img src="images/banner.jpg" alt="Banner Makanan Nusantara">
+        <img src="images/banner.jpg" alt="Makanan Khas Indonesia">
         <div class="banner-text">
             <h2>Temukan Resep Terlezat dari Seluruh Nusantara</h2>
-            <input type="text" placeholder="Cari Resep...">
+            <input type="text" placeholder="Cari Resep..." aria-label="Cari Resep">
         </div>
     </section>
 
-    <!-- Kategori -->
-    <section class="kategori">
-        <h2>Kategori Makanan</h2>
-        <div class="kategori-grid">
-            <div class="kategori-item">
-                <img src="images/rendang.jpg" alt="Rendang">
-                <h3>Masakan Tradisional</h3>
-            </div>
-            <div class="kategori-item">
-                <img src="images/soto.jpg" alt="Soto Betawi">
-                <h3>Masakan Daerah</h3>
-            </div>
-            <div class="kategori-item">
-                <img src="images/gado.jpg" alt="Gado Gado">
-                <h3>Makanan Penutup</h3>
+    <!-- Kategori Makanan -->
+    <section id="kategori" class="kategori">
+        <div class="container">
+            <h2>Kategori Makanan</h2>
+            <div class="kategori-grid">
+                <div class="kategori-item">
+                    <img src="images/rendang.jpg" alt="Masakan Tradisional">
+                    <h3>Masakan Tradisional</h3>
+                </div>
+                <div class="kategori-item">
+                    <img src="images/soto.jpg" alt="Masakan Daerah">
+                    <h3>Masakan Daerah</h3>
+                </div>
+                <div class="kategori-item">
+                    <img src="images/gado.jpg" alt="Makanan Penutup">
+                    <h3>Makanan Penutup</h3>
+                </div>
             </div>
         </div>
     </section>
 
     <!-- Resep Unggulan -->
-    <section class="resep-unggulan">
-        <h2>Resep Unggulan</h2>
-        <div class="resep-grid">
-            <div class="resep-item">
-                <img src="images/rendang.jpg" alt="Rendang Padang">
-                <h3>Rendang Padang</h3>
-                <p>Daging sapi yang dimasak dengan bumbu khas Padang.</p>
-            </div>
-            <div class="resep-item">
-                <img src="images/soto.jpg" alt="Soto Betawi">
-                <h3>Soto Betawi</h3>
-                <p>Kuah santan dengan daging sapi yang gurih dan lezat.</p>
-            </div>
-            <div class="resep-item">
-                <img src="images/gado.jpg" alt="Gado-Gado">
-                <h3>Gado-Gado</h3>
-                <p>Salad sayur dengan saus kacang yang kaya rasa.</p>
+    <section id="resep-unggulan" class="resep-unggulan">
+        <div class="container">
+            <h2>Resep Unggulan</h2>
+            <div class="resep-grid">
+                <div class="resep-item">
+                    <img src="images/rendang.jpg" alt="Rendang Padang">
+                    <h3>Rendang Padang</h3>
+                    <p>Daging sapi yang dimasak dengan bumbu khas Padang.</p>
+                </div>
+                <div class="resep-item">
+                    <img src="images/soto.jpg" alt="Soto Betawi">
+                    <h3>Soto Betawi</h3>
+                    <p>Kuah santan dengan daging sapi yang gurih dan lezat.</p>
+                </div>
+                <div class="resep-item">
+                    <img src="images/gado.jpg" alt="Gado-Gado">
+                    <h3>Gado-Gado</h3>
+                    <p>Salad sayur dengan saus kacang yang kaya rasa.</p>
+                </div>
             </div>
         </div>
     </section>
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 Resep Nusantara. Semua Hak Dilindungi.</p>
+        <div class="container">
+            <p>&copy; 2024 Resep Nusantara. Semua Hak Dilindungi.</p>
+            <ul>
+                <li><a href="#">Instagram</a></li>
+                <li><a href="#">Facebook</a></li>
+                <li><a href="#">YouTube</a></li>
+            </ul>
+        </div>
     </footer>
 </body>
 </html>
