--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Temukan berbagai resep makanan khas Indonesia dari seluruh Nusantara dengan gambar dan cara memasak yang mudah dipahami.">
+    <meta name="keywords" content="resep, makanan indonesia, kuliner nusantara, resep tradisional, masakan daerah">
+    <meta name="author" content="Resep Nusantara">
     <title>Resep Nusantara | Kuliner Khas Indonesia</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="images/favicon.png">
@@ -40,14 +42,17 @@
         <div class="container">
             <h2>Kategori Makanan</h2>
             <div class="kategori-grid">
+                <!-- Kategori 1 -->
                 <div class="kategori-item">
                     <img src="images/rendang.jpg" alt="Masakan Tradisional">
                     <h3>Masakan Tradisional</h3>
                 </div>
+                <!-- Kategori 2 -->
                 <div class="kategori-item">
                     <img src="images/soto.jpg" alt="Masakan Daerah">
                     <h3>Masakan Daerah</h3>
                 </div>
+                <!-- Kategori 3 -->
                 <div class="kategori-item">
                     <img src="images/gado.jpg" alt="Makanan Penutup">
                     <h3>Makanan Penutup</h3>
@@ -61,20 +66,23 @@
         <div class="container">
             <h2>Resep Unggulan</h2>
             <div class="resep-grid">
+                <!-- Resep 1 -->
                 <div class="resep-item">
                     <img src="images/rendang.jpg" alt="Rendang Padang">
                     <h3>Rendang Padang</h3>
-                    <p>Daging sapi yang dimasak dengan bumbu khas Padang.</p>
+                    <p>Daging sapi yang dimasak dengan bumbu khas Padang hingga empuk dan lezat.</p>
                 </div>
+                <!-- Resep 2 -->
                 <div class="resep-item">
                     <img src="images/soto.jpg" alt="Soto Betawi">
                     <h3>Soto Betawi</h3>
-                    <p>Kuah santan dengan daging sapi yang gurih dan lezat.</p>
+                    <p>Soto dengan kuah santan kental, berisi daging sapi dan berbagai rempah khas Betawi.</p>
                 </div>
+                <!-- Resep 3 -->
                 <div class="resep-item">
                     <img src="images/gado.jpg" alt="Gado-Gado">
                     <h3>Gado-Gado</h3>
-                    <p>Salad sayur dengan saus kacang yang kaya rasa.</p>
+                    <p>Salad sayuran segar dengan siraman saus kacang gurih dan manis.</p>
                 </div>
             </div>
         </div>
