--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                     <li><a href="#beranda">Beranda</a></li>
                     <li><a href="#kategori">Kategori</a></li>
                     <li><a href="#resep-unggulan">Resep Unggulan</a></li>
+                    <li><a href="#video-tutorial">Video Tutorial</a></li>
                     <li><a href="#tentang-kami">Tentang Kami</a></li>
                     <li><a href="#kontak">Kontak</a></li>
                 </ul>
@@ -46,21 +47,18 @@
             <h2>Kategori Makanan</h2>
             <p>Pilih dari berbagai kategori makanan khas Nusantara.</p>
             <div class="kategori-grid">
-                <!-- Kategori 1 -->
                 <div class="kategori-item">
                     <img src="images/rendang.jpg" alt="Masakan Tradisional">
                     <h3>Masakan Tradisional</h3>
                     <p>Masakan yang diwariskan turun-temurun dari nenek moyang.</p>
                     <a href="#">Lihat Resep</a>
                 </div>
-                <!-- Kategori 2 -->
                 <div class="kategori-item">
                     <img src="images/soto.jpg" alt="Masakan Daerah">
                     <h3>Masakan Daerah</h3>
                     <p>Resep yang berasal dari berbagai daerah di Indonesia.</p>
                     <a href="#">Lihat Resep</a>
                 </div>
-                <!-- Kategori 3 -->
                 <div class="kategori-item">
                     <img src="images/gado.jpg" alt="Makanan Penutup">
                     <h3>Makanan Penutup</h3>
@@ -77,21 +75,18 @@
             <h2>Resep Unggulan</h2>
             <p>Pilihan resep terbaik dari seluruh Nusantara.</p>
             <div class="resep-grid">
-                <!-- Resep 1 -->
                 <div class="resep-item">
                     <img src="images/rendang.jpg" alt="Rendang Padang">
                     <h3>Rendang Padang</h3>
                     <p>Daging sapi yang dimasak dengan bumbu khas Padang hingga empuk dan lezat.</p>
                     <a href="#">Lihat Detail</a>
                 </div>
-                <!-- Resep 2 -->
                 <div class="resep-item">
                     <img src="images/soto.jpg" alt="Soto Betawi">
                     <h3>Soto Betawi</h3>
                     <p>Kuah santan kental dengan potongan daging sapi, kaya rasa dan gurih.</p>
                     <a href="#">Lihat Detail</a>
                 </div>
-                <!-- Resep 3 -->
                 <div class="resep-item">
                     <img src="images/gado.jpg" alt="Gado-Gado">
                     <h3>Gado-Gado</h3>
@@ -108,17 +103,177 @@
             <h2>Video Tutorial</h2>
             <p>Lihat tutorial memasak langsung dari para chef Nusantara.</p>
             <div class="video-grid">
-                <!-- Video 1 -->
                 <div class="video-item">
                     <iframe width="100%" height="315" src="https://www.youtube.com/embed/tgbNymZ7vqY" title="Video Tutorial Rendang"></iframe>
                     <h3>Cara Memasak Rendang</h3>
                 </div>
-                <!-- Video 2 -->
                 <div class="video-item">
                     <iframe width="100%" height="315" src="https://www.youtube.com/embed/tgbNymZ7vqY" title="Video Tutorial Soto"></iframe>
                     <h3>Cara Memasak Soto Betawi</h3>
                 </div>
-                <!-- Video 3 -->
+                <div class="video-item">
+                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/tgbNymZ7vqY" title="Video Tutorial Gado-Gado"></iframe>
+                    <h3>Cara Membuat Gado-Gado</h3>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Tentang Kami -->
+    <section id="tentang-kami" class="tentang-kami">
+        <div class="container">
+            <h2>Tentang Kami</h2>
+            <p>Resep Nusantara adalah platform yang menyediakan berbagai resep makanan khas Indonesia, dari masakan tradisional hingga modern. Kami berdedikasi untuk melestarikan dan menyebarluaskan kelezatan kuliner Nusantara.</p>
+        </div>
+    </section>
+
+    <!-- Kontak -->
+    <section id="kontak" class="kontak">
+        <div class="container">
+            <h2>Kontak Kami</h2>
+            <p>Jika Anda memiliki pertanyaan atau ingin berbagi resep, jangan ragu untuk menghubungi kami.</p>
+            <form action="#" method="post">
+                <label for="name">Nama:</label>
+                <input type="text" id="name" name="name" required>
+
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+
+                <label for="message">Pesan:</label>
+                <textarea id="message" name="message" rows="4" required></textarea>
+
+                <button type="submit">Kirim Pesan</button>
+            </form>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 Resep Nusantara. Semua Hak Dilindungi.</p>
+            <ul>
+                <li><a href="#">Instagram</a></li>
+                <li><a href="#">Facebook</a></li>
+                <li><a href="#">YouTube</a></li>
+            </ul>
+        </div>
+    </footer>
+
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="id">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Temukan berbagai resep makanan khas Indonesia dari seluruh Nusantara dengan gambar, video, dan cara memasak yang mudah dipahami.">
+    <meta name="keywords" content="resep, makanan indonesia, kuliner nusantara, masakan daerah, resep tradisional, makanan khas indonesia">
+    <meta name="author" content="Resep Nusantara">
+    <title>Resep Nusantara | Kuliner Khas Indonesia</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="images/favicon.png">
+</head>
+<body>
+
+    <!-- Header -->
+    <header>
+        <div class="container">
+            <h1>Resep Nusantara</h1>
+            <nav>
+                <ul>
+                    <li><a href="#beranda">Beranda</a></li>
+                    <li><a href="#kategori">Kategori</a></li>
+                    <li><a href="#resep-unggulan">Resep Unggulan</a></li>
+                    <li><a href="#video-tutorial">Video Tutorial</a></li>
+                    <li><a href="#tentang-kami">Tentang Kami</a></li>
+                    <li><a href="#kontak">Kontak</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <!-- Banner -->
+    <section id="beranda" class="banner">
+        <img src="images/banner.jpg" alt="Makanan Khas Indonesia">
+        <div class="banner-text">
+            <h2>Temukan Resep Terlezat dari Seluruh Nusantara</h2>
+            <p>Jelajahi kekayaan kuliner Indonesia dengan resep yang mudah dipahami.</p>
+            <input type="text" placeholder="Cari Resep..." aria-label="Cari Resep">
+            <button>Cari</button>
+        </div>
+    </section>
+
+    <!-- Kategori Makanan -->
+    <section id="kategori" class="kategori">
+        <div class="container">
+            <h2>Kategori Makanan</h2>
+            <p>Pilih dari berbagai kategori makanan khas Nusantara.</p>
+            <div class="kategori-grid">
+                <div class="kategori-item">
+                    <img src="images/rendang.jpg" alt="Masakan Tradisional">
+                    <h3>Masakan Tradisional</h3>
+                    <p>Masakan yang diwariskan turun-temurun dari nenek moyang.</p>
+                    <a href="#">Lihat Resep</a>
+                </div>
+                <div class="kategori-item">
+                    <img src="images/soto.jpg" alt="Masakan Daerah">
+                    <h3>Masakan Daerah</h3>
+                    <p>Resep yang berasal dari berbagai daerah di Indonesia.</p>
+                    <a href="#">Lihat Resep</a>
+                </div>
+                <div class="kategori-item">
+                    <img src="images/gado.jpg" alt="Makanan Penutup">
+                    <h3>Makanan Penutup</h3>
+                    <p>Hidangan penutup manis untuk menyempurnakan makanan.</p>
+                    <a href="#">Lihat Resep</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Resep Unggulan -->
+    <section id="resep-unggulan" class="resep-unggulan">
+        <div class="container">
+            <h2>Resep Unggulan</h2>
+            <p>Pilihan resep terbaik dari seluruh Nusantara.</p>
+            <div class="resep-grid">
+                <div class="resep-item">
+                    <img src="images/rendang.jpg" alt="Rendang Padang">
+                    <h3>Rendang Padang</h3>
+                    <p>Daging sapi yang dimasak dengan bumbu khas Padang hingga empuk dan lezat.</p>
+                    <a href="#">Lihat Detail</a>
+                </div>
+                <div class="resep-item">
+                    <img src="images/soto.jpg" alt="Soto Betawi">
+                    <h3>Soto Betawi</h3>
+                    <p>Kuah santan kental dengan potongan daging sapi, kaya rasa dan gurih.</p>
+                    <a href="#">Lihat Detail</a>
+                </div>
+                <div class="resep-item">
+                    <img src="images/gado.jpg" alt="Gado-Gado">
+                    <h3>Gado-Gado</h3>
+                    <p>Salad sayuran segar dengan saus kacang yang gurih dan manis.</p>
+                    <a href="#">Lihat Detail</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Video Tutorial -->
+    <section id="video-tutorial" class="video-tutorial">
+        <div class="container">
+            <h2>Video Tutorial</h2>
+            <p>Lihat tutorial memasak langsung dari para chef Nusantara.</p>
+            <div class="video-grid">
+                <div class="video-item">
+                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/tgbNymZ7vqY" title="Video Tutorial Rendang"></iframe>
+                    <h3>Cara Memasak Rendang</h3>
+                </div>
+                <div class="video-item">
+                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/tgbNymZ7vqY" title="Video Tutorial Soto"></iframe>
+                    <h3>Cara Memasak Soto Betawi</h3>
+                </div>
                 <div class="video-item">
                     <iframe width="100%" height="315" src="https://www.youtube.com/embed/tgbNymZ7vqY" title="Video Tutorial Gado-Gado"></iframe>
                     <h3>Cara Membuat Gado-Gado</h3>
