--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Koperasi Masyarakat - Meningkatkan kesejahteraan bersama melalui kebersamaan">
-    <title>Koperasi Masyarakat</title>
+    <meta name="description" content="Resep Makanan Daerah - Kumpulan resep makanan tradisional dari seluruh Nusantara">
+    <title>Resep Makanan Daerah</title>
     <style>
-        /* Reset CSS untuk memastikan tampilan konsisten di berbagai browser */
+        /* Reset CSS */
         * {
             margin: 0;
             padding: 0;
@@ -14,34 +14,37 @@
         }
 
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            font-family: 'Arial', sans-serif;
+            background-color: #f8f9fa;
             color: #333;
-            line-height: 1.6;
         }
 
         header {
-            background: #4CAF50;
-            color: white;
-            padding: 20px 0;
+            background-color: #ff6f61;
+            padding: 20px;
             text-align: center;
+            color: white;
+        }
+
+        header h1 {
+            font-size: 2.5em;
         }
 
         nav {
-            display: flex;
-            justify-content: center;
             background-color: #333;
+            padding: 10px;
+            text-align: center;
         }
 
         nav a {
             color: white;
-            padding: 15px 20px;
+            padding: 10px 20px;
             text-decoration: none;
-            text-align: center;
+            display: inline-block;
         }
 
         nav a:hover {
-            background-color: #575757;
+            background-color: #ff6f61;
         }
 
         .container {
@@ -51,80 +54,168 @@
         }
 
         .hero {
-            background-image: url('https://source.unsplash.com/1600x600/?community,cooperation');
+            background-image: url('https://source.unsplash.com/1600x600/?indonesia,food');
             background-size: cover;
             background-position: center;
-            color: white;
             padding: 100px 20px;
+            color: white;
             text-align: center;
         }
 
-        .hero h1 {
+        .hero h2 {
             font-size: 3em;
         }
 
-        .hero p {
-            font-size: 1.5em;
+        .intro {
+            text-align: center;
+            padding: 20px 0;
+        }
+
+        .intro h2 {
+            font-size: 2em;
+            margin-bottom: 10px;
+        }
+
+        .intro p {
+            font-size: 1.2em;
+            color: #555;
         }
 
         .grid {
             display: flex;
             flex-wrap: wrap;
             gap: 20px;
-            margin-top: 20px;
+            margin: 20px 0;
         }
 
         .grid-item {
             background: white;
-            padding: 20px;
             flex: 1 1 calc(33.333% - 20px);
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
 
-        .grid-item h2 {
-            font-size: 1.8em;
-            margin-bottom: 10px;
+        .grid-item img {
+            width: 100%;
+            height: auto;
+        }
+
+        .grid-item h3 {
+            font-size: 1.5em;
+            margin: 10px 0;
         }
 
         .grid-item p {
             font-size: 1em;
-            line-height: 1.6;
+            color: #555;
+        }
+
+        .recipe-detail {
+            display: flex;
+            margin-top: 40px;
+            gap: 40px;
+        }
+
+        .recipe-detail img {
+            width: 50%;
+            height: auto;
+            border-radius: 10px;
+        }
+
+        .recipe-content {
+            flex: 1;
+        }
+
+        .recipe-content h2 {
+            font-size: 2em;
+            margin-bottom: 20px;
+        }
+
+        .recipe-content ul {
+            list-style: none;
+            padding-left: 0;
+        }
+
+        .recipe-content ul li {
+            margin-bottom: 10px;
+            font-size: 1.2em;
+        }
+
+        .steps {
+            margin-top: 40px;
+        }
+
+        .steps h3 {
+            font-size: 1.8em;
+            margin-bottom: 20px;
+        }
+
+        .steps p {
+            font-size: 1.2em;
+            margin-bottom: 10px;
+        }
+
+        .video {
+            margin-top: 40px;
+        }
+
+        .comments-section {
+            margin-top: 40px;
+            background-color: #f1f1f1;
+            padding: 20px;
+            border-radius: 10px;
+        }
+
+        .comments-section h3 {
+            font-size: 1.8em;
+            margin-bottom: 20px;
+        }
+
+        .comment {
+            border-bottom: 1px solid #ddd;
+            padding: 10px 0;
+        }
+
+        .comment:last-child {
+            border-bottom: none;
+        }
+
+        .comment h4 {
+            margin-bottom: 5px;
+            font-size: 1.2em;
+        }
+
+        .comment p {
+            margin-bottom: 5px;
+        }
+
+        .social-icons {
+            margin-top: 40px;
+            text-align: center;
+        }
+
+        .social-icons a {
+            margin: 0 10px;
+            color: #333;
+            font-size: 2em;
+            text-decoration: none;
         }
 
         footer {
             background-color: #333;
             color: white;
+            padding: 20px;
             text-align: center;
-            padding: 10px 0;
-            margin-top: 20px;
-        }
-
-        footer p {
-            margin: 5px 0;
-        }
-
-        .social-icons {
-            margin-top: 10px;
-        }
-
-        .social-icons a {
-            color: white;
-            margin: 0 10px;
-            font-size: 20px;
-            text-decoration: none;
+            margin-top: 40px;
         }
 
         @media (max-width: 768px) {
-            .grid-item {
-                flex: 1 1 100%;
+            .recipe-detail {
+                flex-direction: column;
             }
 
-            .hero h1 {
-                font-size: 2.5em;
-            }
-
-            .hero p {
-                font-size: 1.2em;
+            .recipe-detail img {
+                width: 100%;
             }
         }
     </style>
@@ -132,51 +223,100 @@
 <body>
 
     <header>
-        <h1>Koperasi Masyarakat</h1>
-        <p>Bersama Membangun Ekonomi Kerakyatan</p>
+        <h1>Resep Makanan Daerah Nusantara</h1>
+        <p>Menjelajahi Kelezatan Tradisional Indonesia</p>
     </header>
 
     <nav>
-        <a href="#home">Home</a>
+        <a href="#home">Beranda</a>
+        <a href="#recipes">Resep</a>
         <a href="#about">Tentang Kami</a>
-        <a href="#services">Layanan</a>
         <a href="#contact">Kontak</a>
     </nav>
 
     <section class="hero" id="home">
-        <div class="container">
-            <h1>Selamat Datang di Koperasi Kami</h1>
-            <p>Kami berkomitmen untuk memajukan ekonomi masyarakat melalui prinsip kebersamaan dan kesejahteraan bersama.</p>
+        <h2>Selamat Datang di Website Resep Tradisional Nusantara</h2>
+        <p>Kami menyediakan berbagai macam resep makanan daerah dari seluruh pelosok Indonesia.</p>
+    </section>
+
+    <section class="container intro">
+        <h2>Makanan Khas dari Berbagai Daerah</h2>
+        <p>Temukan beragam resep makanan tradisional yang kaya akan cita rasa lokal, bahan-bahan alami, dan proses pembuatan yang unik.</p>
+    </section>
+
+    <section class="container grid" id="recipes">
+        <div class="grid-item">
+            <img src="https://source.unsplash.com/600x400/?indonesian,food" alt="Makanan 1">
+            <h3>Sate Madura</h3>
+            <p>Sate khas Madura yang terkenal dengan bumbu kacang yang lezat dan daging yang empuk.</p>
+        </div>
+        <div class="grid-item">
+            <img src="https://source.unsplash.com/600x400/?traditional,food" alt="Makanan 2">
+            <h3>Rendang Padang</h3>
+            <p>Rendang daging sapi yang kaya akan rempah-rempah, hidangan yang diakui dunia internasional.</p>
+        </div>
+        <div class="grid-item">
+            <img src="https://source.unsplash.com/600x400/?spices,food" alt="Makanan 3">
+            <h3>Pempek Palembang</h3>
+            <p>Pempek ikan khas Palembang dengan kuah cuka yang segar dan pedas.</p>
         </div>
     </section>
 
-    <section class="container" id="about">
-        <h2>Tentang Kami</h2>
-        <p>Koperasi Masyarakat adalah organisasi ekonomi yang didirikan atas dasar kepentingan bersama. Kami menyediakan layanan permodalan, simpan pinjam, dan dukungan usaha kecil untuk membantu masyarakat mencapai kemandirian ekonomi.</p>
+    <section class="container recipe-detail">
+        <img src="https://source.unsplash.com/800x600/?rendang,indonesian" alt="Rendang Padang">
+        <div class="recipe-content">
+            <h2>Rendang Padang</h2>
+            <h3>Bahan-bahan:</h3>
+            <ul>
+                <li>1 kg daging sapi</li>
+                <li>500 ml santan kental</li>
+                <li>5 siung bawang putih</li>
+                <li>10 butir bawang merah</li>
+                <li>5 buah cabai merah besar</li>
+                <li>2 cm lengkuas</li>
+                <li>2 cm jahe</li>
+                <li>Daun jeruk, serai, dan daun salam</li>
+                <li>Garam dan gula secukupnya</li>
+            </ul>
+
+            <section class="steps">
+                <h3>Langkah-langkah:</h3>
+                <p>1. Haluskan bawang putih, bawang merah, cabai, lengkuas, dan jahe.</p>
+                <p>2. Tumis bumbu yang sudah dihaluskan hingga harum.</p>
+                <p>3. Masukkan daging sapi yang telah dipotong-potong, aduk rata.</p>
+                <p>4. Tambahkan santan, serai, daun jeruk, dan daun salam. Masak dengan api kecil hingga santan menyusut.</p>
+                <p>5. Aduk secara berkala dan masak hingga daging empuk serta bumbu meresap sempurna.</p>
+                <p>6. Sajikan rendang dengan nasi hangat.</p>
+            </section>
+        </div>
     </section>
 
-    <section class="container grid" id="services">
-        <div class="grid-item">
-            <h2>Pendanaan Usaha</h2>
-            <p>Kami memberikan pinjaman dengan bunga rendah kepada para anggota yang ingin mengembangkan usahanya, membantu pertumbuhan ekonomi lokal.</p>
+    <section class="container video">
+        <h2>Video Tutorial</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Rendang Tutorial" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </section>
+
+    <section class="container comments-section">
+        <h3>Komentar</h3>
+        <div class="comment">
+            <h4>Ahmad</h4>
+            <p>Resep ini sangat mudah diikuti, dan hasil rendangnya luar biasa enak!</p>
         </div>
-        <div class="grid-item">
-            <h2>Pelatihan dan Edukasi</h2>
-            <p>Kami menyediakan program pelatihan untuk meningkatkan keterampilan bisnis dan manajemen bagi anggota koperasi agar mampu bersaing di pasar modern.</p>
+        <div class="comment">
+            <h4>Siti</h4>
+            <p>Saya mencoba membuat rendang dengan resep ini, rasanya sangat autentik. Terima kasih!</p>
         </div>
-        <div class="grid-item">
-            <h2>Jasa Simpan Pinjam</h2>
-            <p>Melalui layanan simpan pinjam, anggota dapat menabung dan mendapatkan manfaat dari kebersamaan dalam koperasi, dengan hasil yang adil dan transparan.</p>
-        </div>
+    </section>
+
+    <section class="social-icons">
+        <h3>Bagikan Resep Ini</h3>
+        <a href="https://facebook.com" target="_blank">Facebook</a>
+        <a href="https://twitter.com" target="_blank">Twitter</a>
+        <a href="https://instagram.com" target="_blank">Instagram</a>
     </section>
 
     <footer>
-        <p>&copy; 2024 Koperasi Masyarakat. All Rights Reserved.</p>
-        <div class="social-icons">
-            <a href="https://facebook.com" target="_blank">Facebook</a>
-            <a href="https://twitter.com" target="_blank">Twitter</a>
-            <a href="https://instagram.com" target="_blank">Instagram</a>
-        </div>
+        <p>&copy; 2024 Resep Makanan Daerah Nusantara. All Rights Reserved.</p>
     </footer>
 
 </body>
